src/index.css
/* ... */
/* Hero text slider starts */
.slide {
  display: inline-block;
  flex-direction: column;
  transition: all cubic-bezier(0.71, 0.03, 0.34, 1);
}

.wrapper {
  display: flex;
  flex-direction: column;
  animation: wordSlider 21s infinite cubic-bezier(0.9, 0.01, 0.3, 0.99);
}

@keyframes wordSlider {
  0% {
    transform: translateY(0%);
  }
  12.5% {
    transform: translateY(-12.5%);
  }
  25% {
    transform: translateY(-25%);
  }
  37.5% {
    transform: translateY(-37.5%);
  }
  50% {
    transform: translateY(-50%);
  }
  62.5% {
    transform: translateY(-62.5%);
  }
  75% {
    transform: translateY(-75%);
  }
  87.5% {
    transform: translateY(-87.5%);
  }
}

/* Hero Text slider ends */

.gradient-line {
  width: 2px;
  background: linear-gradient(
    0deg,
    rgba(69, 222, 196, 0) 0%,
    #62e0ff 25%,
    #52aeff 37.51%,
    #fd5c79 62.83%,
    #6d45ce 92.91%
  );
}

.gradient-edge:nth-of-type(1) {
  left: 0;
  background: rgb(0, 0, 0);
  background: linear-gradient(
    90deg,
    rgba(0, 0, 0, 1) 0%,
    rgba(255, 255, 255, 0) 100%
  );
}
.gradient-edge:nth-of-type(2) {
  right: 0;
  background: linear-gradient(
    -90deg,
    rgba(0, 0, 0, 1) 0%,
    rgba(255, 255, 255, 0) 100%
  );
}

/* marquee */
.marquee {
  width: 100dvw;
  overflow: hidden;
  position: relative;
}
.marquee-box {
  display: flex;
  align-items: center;
  width: 200%;
  height: 100%;
  position: absolute;
  overflow: hidden;
  animation: marquee 60s linear infinite;
}
.marquee-item {
  float: left;
}
@keyframes marquee {
  0% {
    left: 0;
  }
  100% {
    left: -100%;
  }
}
/* marquee end */

.card {
  --start: 0;
  position: relative;
  z-index: 40;
  overflow: hidden;
  transition: border-color 1s ease-in-out;
}

.card::before {
  position: absolute;
  content: "";
  width: 100%;
  height: 100%;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 12px;
  border: 2px solid transparent;
  background: var(--gradient);
  background-attachment: fixed;
  mask: linear-gradient(#0000, #0000),
    conic-gradient(
      from calc((var(--start) - 15) * 1deg),
      #ffffff1f 0deg,
      white,
      #ffffff00 100deg
    );
  mask-composite: intersect;
  mask-clip: padding-box, border-box;
  opacity: 0;
  transition: 0.5s ease;
}

.glow {
  pointer-events: none;
  position: absolute;
  width: 100%;
  height: 100%;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  filter: blur(10px);
  filter: saturate(200);
}

.card:hover::before {
  opacity: 1;
}

